# czid-platformics

./: .dockerignore  .gitattributes  .gitignore  .moto_recording  Dockerfile.motoserver  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
entities/: Dockerfile  Makefile  README.md  alembic.ini  cerbos_test.py  conftest.py  docker-compose.yml  pyproject.toml
entities/.devcontainer/: devcontainer.json
entities/.happy/: config.json
entities/api/: README.md  conftest.py  files.py  groupby_helpers.py  gunicorn_conf.py  main.py  mutations.py  queries.py  relationships.py  schema.graphql  schema.json  server.py  strawberry.py
entities/api/core/: cerbos_sqlalchemy.py  deps.py  gql_loaders.py  gql_to_sql.py  gql_types.py  helpers.py  settings.py  strawberry_extensions.py
entities/api/files/: update.py
entities/api/helpers/: accession.py  bulk_download.py  consensus_genome.py  genomic_range.py  host_organism.py  index_file.py  metadatum.py  metric_consensus_genome.py  phylogenetic_tree.py  reference_genome.py  sample.py  sequencing_read.py  taxon.py  upstream_database.py
entities/api/tests/: test_authorization.py  test_basic_files.py  test_basic_queries.py  test_file_writes.py  test_nested_queries.py  test_wgs_todo.py
entities/api/types/: accession.py  bulk_download.py  consensus_genome.py  contig.py  contigs.py  coverage_viz.py  dataloaders.py  entities.py  genomic_range.py  host_organism.py  index_file.py  metadata_field.py  metadata_field_project.py  metadatum.py  metric_consensus_genome.py  phylogenetic_tree.py  primer_bed.py  reference_genome.py  run.py  run_entity_input.py  run_step.py  sample.py  samples.py  sequence_alignment_index.py  sequencing_read.py  sequencing_reads.py  taxon.py  upstream_database.py  workflow.py  workflow_version.py
entities/api/validators/: accession.py  bulk_download.py  consensus_genome.py  contig.py  genomic_range.py  host_organism.py  index_file.py  metadatum.py  metric_consensus_genome.py  phylogenetic_tree.py  reference_genome.py  sample.py  sequence_alignment_index.py  sequencing_read.py  taxon.py  upstream_database.py
entities/bleh/api/: mutations.py
entities/bleh/support/: enums.py
entities/cerbos/config/: config.yaml
entities/cerbos/policies/: accession.yaml  bulk_download.yaml  consensus_genome.yaml  contig.yaml  coverage_viz.yaml  derived_roles_common.yaml  entity.yaml  file.yaml  genomic_range.yaml  host_organism.yaml  index_file.yaml  metadata_field.yaml  metadata_field_project.yaml  metadatum.yaml  metric_consensus_genome.yaml  phylogenetic_tree.yaml  primer_bed.yaml  reference_genome.yaml  resource_album.yaml  resource_policy.yaml  run.yaml  run_entity_input.yaml  run_step.yaml  sample.yaml  sequence_alignment_index.yaml  sequencing_read.yaml  taxon.yaml  upstream_database.yaml  workflow.yaml  workflow_version.yaml
entities/cerbos/test/: policy_test.yaml
entities/cli/: gql_schema.py  gqlcli.py  makejwt.py
entities/codegen/: conftest.py  generator.py
entities/codegen/lib/: linkml_wrappers.py
entities/codegen/tests/: test_authorization.py  test_basic_files.py  test_basic_queries.py  test_file_mutations.py  test_file_queries.py  test_file_uploads.py  test_file_writes.py  test_nested_queries.py  test_test_setup.py  test_where_clause.py
entities/database/: connect.py
entities/database/migrations/: script.py.mako
entities/database/models/: __init__.py  accession.py  base.py  bulk_download.py  consensus_genome.py  contig.py  coverage_viz.py  file.py  files.py  genomic_range.py  host_organism.py  index_file.py  metadata_field.py  metadata_field_project.py  metadatum.py  metric_consensus_genome.py  phylogenetic_tree.py  primer_bed.py  reference_genome.py  run.py  run_entity_input.py  run_step.py  sample.py  samples.py  sequence_alignment_index.py  sequencing_read.py  taxon.py  (+3 more)
entities/database_migrations/: env.py  script.py.mako
entities/etc/: nginx.conf  supervisord.conf
entities/files/: format_handlers.py
entities/policy/: derived_roles_common.yaml
entities/schema/: .platformics.yaml.swp  README.md  platformics.yaml  workflows.yaml
entities/scripts/: consensus_genome_seed.py  create_db.py  generate_api_code.py  migrate.sh  seed.py
entities/security/: token_auth.py
entities/support/: enums.py  format_handlers.py  limit_offset.py
entities/test_infra/: factories.py
entities/tests/: conftest.py  test_authorization.py  test_db_integration.py  test_examples_db.py  test_examples_gql.py  test_examples_unit.py  test_format_handlers.py  test_nested_queries.py  test_samples.py  test_sum.py
workflows/: Dockerfile  Makefile  README.md  Untitled.ipynb  alembic.ini  config.py  conftest.py  defaults.cfg  docker-compose.yml  entity_gql_schema.py  entity_interface.py  environment.test  first_workflow_manifest.json  loader.py  main.py  manifest.py  manifest_reader.py  platformics  plugin_types.py  pyproject.toml  run_loader.py  sequence_manifest.json  settings.py  test_local_workflow_runner.py  version.py
workflows/.happy/: config.json
workflows/api/: config.py  files.py  main.py  manifest.py  mutations.py  queries.py  schema.graphql  schema.json
workflows/cli/: gql_schema.py  gqlcli.py
workflows/database/: connect.py
workflows/database_migrations/: env.py
workflows/etc/: nginx.conf  supervisord.conf
workflows/example_workflows/: foo.fa  manifest.yml  simple_workflow.wdl
workflows/factoryboy/: workflow_factory.py
workflows/manifest/: consensus_genome.yml  manifest.py  sample.yml  test_manifest.py
workflows/manifests/: first_workflow_manifest.json  sequence_manifest.json
workflows/plugins/: plugin_types.py
workflows/schema/: README.md  workflows.yaml
workflows/scripts/: create_db.py  dev_seeder.py  migrate.sh  run_workflow.py  seed.py  test_loaders.py
workflows/security/: token_auth.py
workflows/support/: enums.py  limit_offset.py
workflows/terraform_test/: main.tf  providers.tf  run_swipe_plugin_test.py  stage-test.yml  test_wdl.wdl
workflows/test/: conftest.py  test_workflow_runs.py  test_workflows_db.py
workflows/test_workflows/: miniwdl.cfg  sample_name.wdl
(+365 files in other folders)
