[tool.poetry]
name = "entities"
version = "0.1.0"
description = "Entities Service for Platformics"
authors = ["CZI Infectious Disease Team <help@czid.org>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-sqlalchemy-mapper = "^0.1.1"
strawberry-graphql = "0.217.0"
fastapi = "^0.100.0"
rich = "^13.4.2"
typer = "^0.9.0"
libcst = "^1.0.1"
uvicorn = "^0.23.1"
gunicorn = "^21.2.0"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
ruff = "^0.0.278"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-postgresql = "^5.0.0"
factory-boy = "^3.3.0"
faker-biology = "^0.6.0"
sgqlc = "^16.3"
pytest-asyncio = "^0.21.1"
psycopg-binary = "^3.1.9"
httpx = "^0.24.1"
cerbos = "^0.10.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
jwcrypto = "^1.5.0"
black = "^23.7.0"
uuid6 = "^2023.5.2"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
boto3 = "^1.28.43"
boto3-stubs = {extras = ["s3", "sts"], version = "^1.28.61"}
faker-enum = "^0.0.2"
biopython = "^1.81"
moto = "^4.2.3"
jinja2 = "^3.1.2"
linkml = "^1.5.7"
strcase = "^1.0.0"
linkml-runtime = "^1.6.0"
sqlalchemy_utils = "^0.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = [
    'gql_schema\.py$',
    '^platformics/thirdparty',
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
markers = [
    "asyncio",
]
