[tool.poetry]
name = "workflows"
version = "0.0.1"
description = "Workflows Service for Platformics"
authors = ["CZI Infectious Disease Team <help@czid.org>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-sqlalchemy-mapper = "^0.1.1"
fastapi = "^0.100.0"
rich = "^13.4.2"
typer = "^0.9.0"
libcst = "^1.0.1"
uvicorn = "^0.23.1"
gunicorn = "^21.2.0"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
ruff = "^0.0.278"
psycopg2-binary = "^2.9.6"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-postgresql = "^5.0.0"
factory-boy = "^3.3.0"
faker-biology = "^0.6.0"
boto3 = "^1.28.12"
semver = "^3.0.1"
sgqlc = "^16.3"
psycopg-binary = "^3.1.10"
gql = { extras = ["all"], version = "^3.4.1" }
pydantic = "^2.3.0"
cerbos = "^0.10.1"
jwcrypto = "^1.5.0"
pydantic-settings = "^2.0.3"
uuid6 = "^2023.5.2"
boto3-stubs = { extras = ["s3", "sts"], version = "^1.28.50" }
black = "^23.9.1"
mypy = "^1.5.1"
sqlalchemy_utils = "^0.41.1"
redis = "^5.0.1"
linkml = "^1.5.7"
strcase = "^1.0.0"
linkml-runtime = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
implicit_reexport = false
exclude = ['gql_schema\.py$', '^platformics/thirdparty']

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
